[package]
name = "cgdmat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.1"
rust-crypto = "^0.2"
aes-gcm = "0.9.4"
base64 = "0.13.0"
cipher = "0.4.3"
generic-array = "0.14.5"
rpassword = "6.0"
sha2 = "0.10.2"
anyhow = "1.0.57"
clap = { version = "3.1.17", features = ["derive"] }
config = "0.13.1"
xdg = "2.4.1"
